# ChaosEquations

./: .clang-format  .gitignore  CMakeLists.txt
include/albedo/: RenderBuffer.h  Shader.h  ShaderPreprocessor.h  Uniform.h  VertexBuffer.h  opengl.h  uniforms.h  vertex_attributes.h
include/facade/: CoordinateSpace.cpp  CoordinateSpace.h  Facade.h  FacadeEnvironment.h  FacadeRenderer.h  FacadeScreen.h  GuiLayer.h  Layer.h  Math.h  core.h
include/facade/layer/: RectLayer.h  layers.h
include/liblib/: Colors.h  Math.h  utils.cpp  utils.h
resources/: grid.frag  gridutil.glsl  simple.frag  simple.vert
resources/facade/shaders/: rect_layer.frag  rect_layer.vert
src/: FacadeWindow.cpp  FacadeWindow.h  Game.cpp  Game.h  Screen.h  Shader.cpp  Shader.h  SimpleRenderBuffer.cpp  SimpleRenderBuffer.h  SimpleRenderType.cpp  SimpleRenderType.h  TestScreen.cpp  TestScreen.h  Window.cpp  Window.h  common_gl.h  main.cpp  utils.cpp  utils.h
src/albedo/: RenderBuffer.cpp  RenderType.cpp  RenderType.h  Shader.cpp  Shader.h  ShaderPreprocessor.cpp  ShaderPreprocessor.h  Uniform.cpp  Uniform.h  VertexAttribute.cpp  VertexAttribute.h  VertexAttributeImpl.h  VertexBuffer.cpp  VertexBuffer.h  uniform_type.h  uniforms.h  vertex_attributes.h
src/facade/: Facade.cpp  FacadeEnvironment.cpp  FacadeRenderer.cpp  FacadeScreen.cpp  GuiLayer.cpp  Layer.cpp  Math.cpp
src/facade/layer/: RectLayer.cpp
src/liblib/: Math.cpp
